--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
   <body>
     <header class="page-header">
       <div class="container">
-      Контакты
+      <a class="header-email" href="mailto:sergeypavlov.90@mail.ru">sergeypavlov.90@mail.ru</a>
+      <a class="header-phone" href="tel:+375445512415">+375445512415</a>
       </div>
     </header>
 
     <section class="hero-image">
       <div class="container">
       <h1 class="heading">Неопознанный Енот</h1>
+      <figure class="user-image">
+        <img src="files/use.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+      </figure>
       <p>Junior верстальщик</p>
       </div>
     </section>
@@ -34,10 +38,12 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+      </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
-
+      <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       </div>
@@ -45,7 +51,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      Контакты в подвале
+        <a class="footer-email" href="mailto:sergeypavlov.90@mail.ru">sergeypavlov.90@mail.ru</a>
+        <a class="footer-phone" href="tel:+375445512415">+375445512415</a>
       </div>
     </footer>
   </body>
